# tracy.net

./: .gitignore
.github/workflows/: main.yml
Tracy/: Tracy.csproj
Tracy.Native/: CMakeLists.txt  CMakePresets.json  vcpkg.json
Tracy.Native/src/: TracyClient.cpp
Tracy.Net/: Tracy.Net.csproj  TracyClient.cs
